clang/test/BSC/Negative/InitAnalysis/init-enum.cbs
// RUN: %clang_cc1 -fsyntax-only -uninit-check=all -verify %s

enum Color { RED, GREEN, BLUE };

void use_color(enum Color c);
void use_int(int a);

// Uninit enum.
void test_enum_uninit(void) {
    enum Color c;
    use_color(c); // expected-error {{use of uninitialized value: `c`}}
}

// Enum in struct, partial init.
struct WithEnum { enum Color c; int x; };

void test_struct_enum_partial(void) {
    struct WithEnum w;
    w.x = 1;
    use_color(w.c); // expected-error {{use of uninitialized value: `w.c`}}
}

// Union with scalar and struct: partial struct init.
struct S { int b; int c; };
union U { int a; struct S s; };

void test_union_partial_struct(void) {
    union U u;
    u.s.b = 1;
    use_int(u.s.c);  // expected-error {{use of uninitialized value: `u.s.c`}}
}
